samples/_failures_safe/1761168494_0013d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a095dd9.c: In function ‘main’:
./samples/SAFE/__tmp_4a095dd9.c:167:12: error: missing terminating " character
  167 |     printf("Enter number of vertices (max %d
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4a095dd9.c:167:5: error: expected expression at end of input
  167 |     printf("Enter number of vertices (max %d
      |     ^~~~~~
./samples/SAFE/__tmp_4a095dd9.c:167:5: error: expected declaration or statement at end of input
